phone line align fixed

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -67,7 +67,6 @@ header {
 }
 /*------------------- MENU -------------------*/
 menu {
-	border: solid 1px red;
 	width: 1280px;
 	height: 52px;
 	margin-top: 73px;
@@ -379,7 +378,6 @@ footer {
 	background-color: hsl(216, 53%, 9%);
 }
 #footer-info {
-	border: solid 1px red;
 	width: 1240px;
 	height: 240px;
 	display: grid;
@@ -388,7 +386,7 @@ footer {
 	grid-row-gap: 30px;
 	grid-column-gap: 100px;
 	grid-template-areas: "logo logo logo logo""location contact links media";
-	margin-top: 200px;
+	margin-top: 169px;
 }
 #info-logo {
 	grid-area: logo;
@@ -409,7 +407,7 @@ footer {
 }
 #info-contact {
 	grid-area: contact;
-	align-items: center;
+	align-items: flex-start;
 }
 #info-contact > div {
 	align-items: center;
